# wir-vs-virus_krisengeld_ausgabeapp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonpackage.yml
dge_ausgabeapp/: __main__.py  app.py  blockchain.py  cli.py  main.py  output.py  qrcode.py  start.py
tests/: test_app_logic.py  test_dge_ausgabeapp.py  test_qr_generation.py
