[tool.poetry]
name = "dge-ausgabeapp"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <ulo@ulo.pe>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99
target-version = ['py37']
