[tool.poetry]
name = "dge-ausgabeapp"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <ulo@ulo.pe>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
xxhash = "^1.4.3"
qrcode = {extras = ["pil"], version = "^6.1"}

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"
flake8 = "^3.7.9"

[tool.black]
line-length = 99
target-version = ['py37']

[tool.poetry.scripts]
dge-ausgabeapp = 'dge_ausgabeapp.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

