[tool.poetry]
name = "dge-ausgabeapp"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <ulo@ulo.pe>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
eth-keyfile = "^0.5.1"
web3 = "^5.7.0"
qrcode = {extras = ["pil"], version = "^6.1"}
python-stdnum = "^1.13"
structlog = "^20.1.0"
colorama = "^0.4.3"
pdfrw = "^0.4"
reportlab = "^3.5.42"
eth-keys = "<0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"
flake8 = "^3.7.9"

[tool.poetry.scripts]
dge-ausgabeapp = 'dge_ausgabeapp.__main__:main'

[tool.black]
line-length = 99
target-version = ['py37']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

